<resources>
    <string name="app_name">WestCoast</string>
    <string name="west_coast">Icon</string>
    <string name="boton_iniciar">Inciar</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="btn_alumno">Alumno</string>
    <string name="btn_empresa">Empresa</string>
    <string name="registrar">Registrarse</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <string name="wc">West Coast</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="email">E-mail</string>
    <string name="email_inertar">Insertar E-mail</string>
    <string name="contraseña">Contraseña</string>
    <string name="insertar_contraseña">Insertar contraseña</string>
    <string name="matricula">Matrícula</string>
    <string name="matricula_insertar">Insertar Matrícula</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="carrera">Carrera</string>
    <string name="edad_alummno">Edad</string>
    <string name="direccion">Dirección</string>
    <string name="cp">Código Postal</string>
    <string name="telefono">Teléfono</string>
    <string name="Habilidades">Habilidades</string>
    <string name="intereses">Intereses</string>
    <string name="nombre_empresa">Nombre de la empresa</string>
    <string name="description_empresa">Descripción de la empresa</string>
    <string name="ic_perfil">Perfil</string>
    <string name="ic_chat">Chat</string>
    <string name="ic_calificar">Calificar</string>
    <string name="ic_nueva_oferta">Nueva Oferta</string>
    <string name="ic_salir">Salir</string>
    <string name="perfil_alumno">Perfil Alumno</string>
    <string name="perfil_empresa">Perfil Empresa</string>
    <string name="mostrar_perfil_em">Iniciar</string>
    <string name="mostrar_nombre_alu">Mostrar nombre </string>
    <string name="mostrar_matricula">matricula</string>
    <string name="nueva_oferta">Nueva Oferta</string>
    <string name="descripcion_oferta">Descripción de la oferta y/o tarea</string>
    <string name="contacto_oferta">Contacto</string>
    <string name="agregar_oferta">Agregar Oferta</string>
    <string name="visualizar_oferta">Mostrar Oferta</string>
    <string name="contacto_alumno">Contactar Alumno</string>
    <string name="postularme">Postularse</string>
    <string name="rating_1">Nombre del alumno</string>
    <string name="rating_2">Nombre de la empresa</string>
    <string name="nameOferta">Nombre de la Oferta</string>
    <string name="ubicacion">Ubicación de la empresa</string>
    <string name="codi">Código único de la oferta</string>
    <string name="rfc">RFC de la empresa</string>
    <string name="buscar">Buscar</string>
    <string name="buscar1">Buscar por nombre de empresa</string>
    <string name="area">Área de trabajo</string>


</resources>