<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_image_2020_07_15_at_3_49_17_pm__10_"
    tools:context=".RegistroEmpresa">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/crear_cuenta"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="133dp"
        android:background="@mipmap/ic_profile"
        android:contentDescription="@string/foto_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <ScrollView
        android:layout_width="330dp"
        android:layout_height="376dp"
        android:background="#6D000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/rfc_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rfc"
                android:inputType="textPersonName"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/nombre_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nombre_empresa"
                android:inputType="textPersonName"
                android:textColorHint="#FFFFFF" />

            <MultiAutoCompleteTextView
                android:id="@+id/direccion_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/cp_empresa"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/cp"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/telefono_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FBFBFB" />

            <EditText
                android:id="@+id/email_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColorHint="#FFFFFF"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/contrasena_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <MultiAutoCompleteTextView
                android:id="@+id/descripcion_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_empresa"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFCFC" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/registrar_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="644dp"
        android:background="@drawable/custum_botton_white"
        android:onClick="onClick"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>